# simpleObjViewer

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
include/: BasicWindow.h  IGlfwCallbacks.h  ObjModel.h  RenderWindow.h  RenderWindowCallbacksManager.h  Utils.h
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: BasicWindow.cpp  ObjModel.cpp  RenderWindow.cpp  RenderWindowCallbacksManager.cpp  Utils.cpp
